Add brp property tests